# walkman

./: .clippy.toml  .gitignore  .json  .rustfmt.toml  .video..json  .videos  Cargo.toml  LICENSE  Makefile  README.md  requirements.txt
.cargo/: config.toml
.github/workflows/: build.yml  cd.yml  ci.yml  dependencies-check.yml  lint.yml  publish.yml  test.yml
walkman/configurations/cli-configurations/: Cargo.toml
walkman/configurations/cli-configurations/src/: main.rs  old.main.rs  utils.rs
walkman/configurations/sandbox-configurations/: Cargo.toml  cmd
walkman/configurations/sandbox-configurations/src/: main.rs
walkman/configurations/sandbox-infrastructures/: Cargo.toml
walkman/configurations/sandbox-infrastructures/src/: lib.rs
walkman/core/: domain.py
walkman/core/domain/: Cargo.toml
walkman/core/domain/src/: lib.rs  utils.rs
walkman/core/use-cases/: Cargo.toml
walkman/core/use-cases/src/: boundaries.rs  gateways.rs  interactors.rs  lib.rs  models.rs  utils.rs
walkman/core/use-cases/src/boundaries/: mod.rs
walkman/core/use-cases/src/interactors/: mod.rs
walkman/infrastructures/: Cargo.toml
walkman/infrastructures/gateways-impl/: Cargo.toml
walkman/infrastructures/interface-adapters/: Cargo.toml
walkman/infrastructures/src/: boundaries.rs  lib.rs  utils.rs
walkman/infrastructures/src/gateways/: downloaders.rs  mod.rs  postprocessors.rs  repositories.rs
walkman/scripts/: download_playlist.py
