[package]
name = "infrastructures"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../core/domain" }
use-cases = { path = "../core/use-cases" }

anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
indicatif = "0.18.0"
lofty = "0.22.4"
once_cell = "1.21.3"
derive-new = { workspace = true }
id3 = "1.16.3"
colored = "3.0.0"
tokio = { workspace = true, features = ["time", "sync", "process"] }
tokio-stream = { workspace = true, features = ["io-util"] }
rayon = { workspace = true }

[lints]
workspace = true
