[package]
name = "infrastructures"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../core/domain" }
use-cases = { path = "../core/use-cases" }

anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bon = { workspace = true }
bytesize = "2.0.1"
colored = "3.0.0"
futures = { workspace = true }
id3 = "1.16.3"
indicatif = "0.18.0"
indexmap = "2.10.0"
rayon = { workspace = true }
time = "0.3.41"
tokio = { workspace = true, features = ["fs", "process", "sync", "time"] }
tokio-stream = { workspace = true, features = ["io-util"] }
tracing = { workspace = true }

[lints]
workspace = true
