[package]
name = "cli-configurations"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../../core/domain" }
use-cases = { path = "../../core/use-cases" }
infrastructures = { path = "../../infrastructures" }

anyhow = { workspace = true }
clap = "4.5.41"
num_cpus = "1.17.0"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints]
workspace = true
