[package]
name = "sandbox-configurations"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
flate2 = "1"
bincode = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
anyhow = "*"

[lints]
workspace = true
