[package]
name = "sandbox-infrastructures"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
indicatif = "*"
async-stream = "*"
futures-core = "*"
futures-util = "*"
duct = "*"
tokio = { version = "*", features = ["full"] }
anyhow = "*"
futures = "*"
regex = "*"

[lints]
workspace = true
