[package]
name = "use-cases"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }

anyhow = { workspace = true }
async-trait = { workspace = true }
derive-new = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
tokio-stream = { workspace = true }

[lints]
workspace = true
