[package]
name = "use-cases"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }

anyhow = { workspace = true }
async-trait = { workspace = true }
bon = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-stream = { workspace = true }

[lints]
workspace = true
